# OpenAgent

./: .gitignore  FEATURES.md  README.md  openagent.spec  openagent.yaml.example  package-lock.json  package.json  pyproject.toml  release.sh  tsconfig.base.json
.claude/: launch.json  settings.json
apps/openagent-control/: index.html  package.json  tsconfig.json  vite.config.ts
apps/openagent-control/src/: App.tsx  desktop.d.ts  main.tsx
apps/openagent-control/src/screens/: ChatScreen.tsx  ConnectionScreen.tsx  MemoryScreen.tsx  ToolsScreen.tsx
apps/openagent-desktop/: main.cjs  package.json  preload.cjs
buildResources/: openagent-Info.plist
mcps/editor/: package.json  tsconfig.json
mcps/editor/src/: index.ts
mcps/messaging/: requirements.txt  server.py
openagent/: __init__.py  _frozen.py  agent.py  bootstrap.py  cli.py  config.py  prompts.py  runtime.py  scheduler.py  server.py  service.py  updater.py
openagent/api/: __init__.py  config_store.py  memory.py  server.py
openagent/bridges/: __init__.py  base.py  discord.py  telegram.py  whatsapp.py
openagent/channels/: __init__.py  base.py  commands.py  discord.py  queue.py  senders.py  stt_base.py  stt_deepgram.py  telegram.py  tts.py  tts_base.py  tts_chunker.py  tts_local.py  tts_streaming.py  voice.py  websocket.py  whatsapp.py
openagent/core/: __init__.py  agent.py  builtin_tasks.py  config.py  logging.py  paths.py  prompts.py  scheduler.py  serve_singleton.py  server.py
openagent/gateway/: __init__.py  commands.py  protocol.py  server.py  sessions.py  turn_runner.py  voice_pipeline.py
openagent/gateway/api/: __init__.py  config.py  control.py  health.py  logs.py  marketplace.py  mcps.py  models.py  providers.py  scheduled_tasks.py  sessions.py  system.py  usage.py  vault.py  workflow_tasks.py
openagent/mcp/: __init__.py  builtins.py  client.py  oauth.py  pool.py  transport_stdio.py
openagent/mcp/servers/: __init__.py
openagent/mcp/servers/chrome-devtools/: package.json
openagent/mcp/servers/computer-control/: Cargo.toml  package-lock.json  tsconfig.json
openagent/mcp/servers/computer-control/src/: capture.rs  input.rs  main.rs  main.ts  scaling.rs  tool.rs
openagent/mcp/servers/editor/: package.json
openagent/mcp/servers/messaging/: index.ts  package.json
openagent/mcp/servers/model_manager/: server.py
openagent/mcp/servers/scheduler/: __init__.py  server.py
openagent/mcp/servers/shell/: __init__.py  adapters.py  events.py  handlers.py  hub.py  package.json  shells.py
openagent/mcp/servers/shell/src/: index.ts
openagent/mcp/servers/web-search/: package.json  tsconfig.json
openagent/mcp/servers/web-search/src/: index.ts
openagent/mcp/servers/workflow_manager/: __init__.py  server.py
openagent/mcps/chrome-devtools/: package-lock.json
openagent/mcps/computer-control/src/: index.ts
openagent/mcps/computer-control/src/tools/: index.ts
openagent/mcps/computer-use/: package.json
openagent/mcps/computer-use/src/tools/: computer.ts
openagent/mcps/editor/: package-lock.json
openagent/mcps/messaging/: index.ts  package-lock.json  tsconfig.json
openagent/mcps/scheduler/: server.py
openagent/mcps/shell/: package-lock.json
openagent/mcps/web-search/: package-lock.json
openagent/memory/: __init__.py  bootstrap.py  db.py  knowledge.py  manager.py  schedule.py
openagent/models/: __init__.py  agno_provider.py  base.py  budget.py  catalog.py  claude_api.py  claude_cli.py  default_pricing.json  discovery.py  litellm_provider.py  runtime.py  smart_router.py  zhipu.py
openagent/services/: __init__.py  base.py  manager.py  obsidian.py  syncthing.py
openagent/setup/: bootstrap.py  installer.py
openagent/stream/: __init__.py  channel.py  collector.py  events.py  session.py  wire.py
openagent/workflow/: __init__.py  blocks.py  examples.py  executor.py  request_queue.py  schedule_sync.py  templating.py  validate.py
scripts/: build-computer-control.sh  build-executable.sh  release.sh  restart.sh  setup.sh  sign-notarize-macos.sh  start.sh  status.sh  stop.sh  test_openagent.py
scripts/tests/: test_agent_run_stream.py  test_agno.py  test_agno_forget_clears_history.py  test_agno_partial_commit.py  test_barge_in_commit.py  test_behavior_contract.py  test_bootstrap_import.py  test_bridges.py  test_budget.py  test_buffer_size.py  test_catalog.py  test_claude_cli.py  test_claude_cli_forget_drains_writes.py  test_claude_cli_interrupt.py  test_claude_cli_stale_resume.py  test_claude_cli_stream.py  test_claude_cli_text_recovery.py  test_db_models.py  test_db_providers.py  test_files_endpoint.py  test_gateway_commands.py  test_imports.py  test_marketplace.py  test_mcps_rest.py  test_models.py  test_provider_manager.py  test_rest.py  test_router.py  test_scheduler_fresh_session.py  test_serve_singleton.py  test_sessions_parallel_execution.py  test_shell.py  test_smart_router_hybrid.py  test_smart_router_stream.py  test_stream.py  test_streaming.py  test_stt_deepgram_streaming.py  test_tts_chunker.py  test_tts_elevenlabs_streaming.py  test_tts_local.py  (+8 more)
tests/: test_memory_store.py  test_runtime.py
