[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-framework"
version = "0.12.21"
description = "Simplified LLM agent framework with MCP, memory, and multi-channel support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "agno>=1.0.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "croniter>=2.0.0",
    "claude-agent-sdk>=0.1.50",
    "sqlalchemy>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "google-genai>=1.0.0",
    # Pinned explicitly so PyInstaller bundles the CA store; frozen binaries
    # otherwise hit CERTIFICATE_VERIFY_FAILED on stdlib HTTPS calls because
    # the OS trust store isn't visible inside the bundle (updater.py uses
    # certifi.where() to hand urlopen a working cafile).
    "certifi",
    # workflow block templating ({{expr}} resolution via SandboxedEnvironment)
    "jinja2>=3.1.0",
    # Directly imported by openagent code — currently arrives as a transitive
    # of anthropic/openai, but declare explicitly so swapping those SDKs
    # doesn't silently drop it from the PyInstaller build env.
    "httpx>=0.24",
    "packaging>=21.0",
    # Groq SDK: imported at module level by agno.models.groq when a groq-based
    # provider is selected.  Declaring it here ensures it is installed in the
    # build environment so PyInstaller bundles it (collect_submodules("groq")).
    "groq>=0.4.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3.0"]
whatsapp = ["whatsapp-api-client-python>=0.0.46"]
# Local voice transcription via faster-whisper (CTranslate2). Runs offline
# on CPU, no API key needed. First call downloads the model (~150 MB for
# the default 'base'). Set OPENAGENT_WHISPER_MODEL to pick a different
# size (tiny, base, small, medium, large-v3).
voice = ["faster-whisper>=1.0.0"]
websocket = ["aiohttp>=3.9"]
all = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",
    "whatsapp-api-client-python>=0.0.46",
    "faster-whisper>=1.0.0",
    "aiohttp>=3.9",
]

[project.scripts]
openagent = "openagent.cli:main"

[tool.setuptools.packages.find]
include = ["openagent*"]

[tool.setuptools.package-data]
openagent = [
    "mcp/servers/**/*.ts",
    "mcp/servers/**/*.json",
    "mcp/servers/**/*.py",
    "mcp/servers/**/*.txt",
    "mcp/servers/**/.gitignore",
]
