[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagent-framework"
version = "0.12.34"
description = "Simplified LLM agent framework with MCP, memory, and multi-channel support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "agno>=1.0.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "croniter>=2.0.0",
    "claude-agent-sdk>=0.1.50",
    "sqlalchemy>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "google-genai>=1.0.0",
    # Pinned explicitly so PyInstaller bundles the CA store; frozen binaries
    # otherwise hit CERTIFICATE_VERIFY_FAILED on stdlib HTTPS calls because
    # the OS trust store isn't visible inside the bundle (updater.py uses
    # certifi.where() to hand urlopen a working cafile).
    "certifi",
    # workflow block templating ({{expr}} resolution via SandboxedEnvironment)
    "jinja2>=3.1.0",
    # Directly imported by openagent code — currently arrives as a transitive
    # of anthropic/openai, but declare explicitly so swapping those SDKs
    # doesn't silently drop it from the PyInstaller build env.
    "httpx>=0.24",
    "packaging>=21.0",
    # Groq SDK: imported at module level by agno.models.groq when a groq-based
    # provider is selected.  Declaring it here ensures it is installed in the
    # build environment so PyInstaller bundles it (collect_submodules("groq")).
    "groq>=0.4.0",
    # LiteLLM: vendor-agnostic adapter for TTS/STT (similar to how Agno
    # wraps multiple LLM vendors). One ``providers`` row with
    # ``framework='litellm'`` + ``kind='tts'|'stt'`` + ``name=<vendor>``
    # routes through ``litellm.aspeech`` / ``litellm.atranscription``.
    # See ``openagent/channels/tts.py`` and ``openagent/channels/voice.py``.
    "litellm>=1.50.0",
    # Local STT fallback. Promoted from the ``voice`` extra to core so
    # the bundled installer ships voice-in working out of the box (no
    # cloud STT key required). First call downloads the model (~150 MB).
    "faster-whisper>=1.0.0",
    # Local TTS fallback (Piper). Same rationale as faster-whisper:
    # the bundled Python release ships voice-out working out of the
    # box. First synth call downloads the voice (~25 MB) into
    # ``~/.cache/openagent/piper/``. ONNX runtime + native phonemize
    # binary add ~80 MB to the install but mean the user never sees
    # the "no TTS configured" banner unless they explicitly want a
    # cloud vendor. Pinned to >=1.3 because that's where the
    # ``PiperVoice.synthesize_wav`` entry point lands; the older
    # ``synthesize(text, wav_file)`` signature was removed.
    "piper-tts>=1.3.0",
    # WebSocket client for ElevenLabs streaming TTS (token-in / audio-out).
    # Already pulled in transitively by aiohttp / discord.py / openai-sdk
    # in current installs, but declaring it explicit so the streaming
    # TTS path doesn't quietly break if the transitive disappears in a
    # future bump. ``openagent.channels.tts_streaming`` is the only
    # module that imports it.
    "websockets>=12.0",
    # Cross-platform system telemetry (CPU/RAM/disk/network/processes)
    # surfaced over /api/system + the system_snapshot WS broadcast.
    # Same API on Windows, macOS, Linux — keeps the gateway code
    # platform-agnostic.
    "psutil>=5.9.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3.0"]
whatsapp = ["whatsapp-api-client-python>=0.0.46"]
# Voice in (faster-whisper) AND voice out (piper-tts) are core deps
# so the bundled Python release ships voice mode working out of the
# box. The ``voice`` extra is kept as an empty alias so existing
# installers that resolve it keep working cleanly.
voice = []
websocket = ["aiohttp>=3.9"]
all = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",
    "whatsapp-api-client-python>=0.0.46",
    "aiohttp>=3.9",
]

[project.scripts]
openagent = "openagent.cli:main"

[tool.setuptools.packages.find]
include = ["openagent*"]

[tool.setuptools.package-data]
openagent = [
    "mcp/servers/**/*.ts",
    "mcp/servers/**/*.json",
    "mcp/servers/**/*.py",
    "mcp/servers/**/*.txt",
    "mcp/servers/**/.gitignore",
]
