[package]
name = "openagent-computer-control"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "openagent-computer-control"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
enigo = "0.5"
xcap = "0.7"
image = { version = "0.25", default-features = false, features = ["png"] }
fast_image_resize = "5"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
# screencapture fallback is shelled out — no extra crate

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
